# kermitbot

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
frontend/: Makefile  package.json  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue
migrations/: V1__initial.sql
src/: error.rs  main.rs
src/bot/: mod.rs
src/bot/message_events/: mod.rs  uwu_counter.rs
src/endpoints/: mod.rs  uwu_counter.rs
