[package]
name = "kermitbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.9"
actix-web = "3.3.2"
actix-governor = "0.2.5"
actix-cors = "0.5.4"
actix-files = "0.5.0"
log = "0.4.14"
env_logger = "0.9.0"
envy = "0.4.2"
anyhow = "1.0.45"
lazy_static = "1.4.0"
thiserror = "1.0.30"

[dependencies.refinery]
version = "0.7.0"
features = ["mysql-notls"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.mysql]
version = "21.0.2"
default-features = false

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["rt", "rt-multi-thread"]

[patch.crates-io.mysql]
git = "https://github.com/TheDutchMC/rust-mysql-simple"

[patch.crates-io.refinery]
git = "https://github.com/TheDutchMC/refinery"

[patch.crates-io.refinery-core]
git = "https://github.com/TheDutchMC/refinery"

[profile.release]
panic = "abort"
lto = true